# b32-statistical-modeling

./: README.md  pyproject.toml
data/: wing_length.csv
src/: week2.py  week6-1.py  week6-2.py
